--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,8 @@
+@import "./top.scss";
+@import "./input.scss";
+@import "./container.scss";
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -42,65 +47,12 @@
         z-index: -1;
       }
 
-    input {
-        padding: .7rem 1.5rem;
-        font-size: 1.2rem;
-        border-radius: 25px;
-        border: 1px solid rgba(255, 255, 255, 0.26);
-        background: rgba(255, 255, 255, 0.048);
-        color: white;
-        text-decoration: none;
-        outline: none;
-        &:hover {
-            background: rgba(255, 255, 255, 0.1);
-          }
-    }
     .search {
         text-align: center;
         padding: 1rem;
         ::placeholder{
-            color: #db7b7b;
+            color: #ececec;
         }
-    }
-    .container {
-        max-width: 700px;
-        height: 700px;
-        margin: auto;
-        padding: 0 1rem;
-        position: relative;
-        top: 10%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        .top {
-            width: 100%;
-            margin: 1rem auto;
-            text-align: center;
-            color: rgba(0, 0, 0, 0.562);
-            .measured {
-                p{
-                    color: rgba(245, 245, 245, 0.979);
-                    font-size: 2rem;
-                }
-              }
-          }
-        .bottom {
-            display: flex;
-            justify-content: space-between;
-            text-align: center;
-            width: 100%;
-            margin: 1rem auto;
-            padding: 1.2rem;
-            padding-inline-start: 2rem;
-            padding-inline-end: 2rem;
-            border-radius: 12px;
-            background-color: rgba(255, 255, 255, 0.103);
-            .bold {
-                font-weight: 600;
-                text-transform: uppercase;
-                color: rgba(255, 255, 255, 0.747);
-              }
-          }
     }
   }
 
