--- a/src/styles/_container.module.scss
+++ b/src/styles/_container.module.scss
@@ -7,5 +7,6 @@
     top: 10%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;   
+    justify-content: space-between; 
+    border: 1px solid red; 
   }
