--- a/src/styles/_container.module.scss
+++ b/src/styles/_container.module.scss
@@ -1,12 +1,14 @@
 .container {
     max-width: 700px;
-    height:700px;
+    
     margin: auto;
     padding: 0 1rem;
-    position: relative;
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+    right: 0;
     top: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-between; 
-    border: 1px solid red; 
   }
